Fix spacing for place order section in the sidebar

--- a/css/checkout-layout-161-beta-5.css
+++ b/css/checkout-layout-161-beta-5.css
@@ -1761,6 +1761,8 @@ body.woocommerce-checkout .fc-wrapper #payment ul.payment_methods > .wc_payment_
 }
 
 .fc-wrapper .fc-inside div.place-order {
+  float: none;
+  display: block;
   padding: 0 20px 0;
 }
 @media (min-width: 1000px) {
@@ -1769,13 +1771,16 @@ body.woocommerce-checkout .fc-wrapper #payment ul.payment_methods > .wc_payment_
   }
 }
 
-.fc-sidebar div.place-order {
+.fc-wrapper .fc-sidebar .fc-sidebar__inner div.place-order {
   display: none;
 }
 @media (min-width: 1000px) {
-  .fc-sidebar div.place-order {
+  .fc-wrapper .fc-sidebar .fc-sidebar__inner div.place-order {
+    float: none;
     display: block;
-    padding: 10px 0 0;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 0;
   }
 }
 
@@ -1824,11 +1829,6 @@ body.woocommerce-checkout .fc-wrapper #payment ul.payment_methods > .wc_payment_
 .fc-wrapper .fc-place-order .fc-place-order-button:focus {
   outline: solid 2px #535156;
   outline-offset: 2px;
-}
-
-.fc-sidebar div.place-order {
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
 
 div.place-order .woocommerce-terms-and-conditions-link:focus,
@@ -1927,11 +1927,6 @@ div.woocommerce form #payment .form-row.form-row-middle {
     margin-left: 0;
     margin-right: 4%;
   }
-}
-
-div.woocommerce form .form-row.place-order {
-  float: none;
-  display: block;
 }
 
 div.woocommerce form .form-row .woocommerce-input-wrapper span.description {
