--- a/sass/partials/_woocommerce-form-fields.scss
+++ b/sass/partials/_woocommerce-form-fields.scss
@@ -76,13 +76,6 @@ div.woocommerce form #payment .form-row.form-row-middle {
 
 
 
-div.woocommerce form .form-row.place-order {
-	float: none;
-	display: block;
-}
-
-
-
 div.woocommerce form .form-row .woocommerce-input-wrapper span.description {
 	position: static;
 	display: block;
